--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.2",
-    "numpy>=2.3.2",
+    "flask-socketio>=5.5.1",
+    "numpy>=2.3.4",
     "opencv-python>=4.11.0.86",
-    "pillow>=11.3.0",
+    "pillow>=12.0.0",
     "pygame>=2.6.1",
-]
-
-[dependency-groups]
-dev = [
-    "ipython>=9.4.0",
+    "pyyaml>=6.0.3",
+    "tqdm>=4.67.1",
 ]
