--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "experiment"
-version = "0.1.0"
+version = "0.2.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -13,4 +13,19 @@ dependencies = [
     "pygame>=2.6.1",
     "pyyaml>=6.0.3",
     "tqdm>=4.67.1",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages=["experiment"]
+
+[tool.hatch.build.targets.sdist]
+include=[
+    "*.py",
+    "*.html",
+    "*.css",
+    "*.js"
 ]
