--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "experiment"
-version = "0.2.0"
+version = "0.3.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -28,4 +28,9 @@ include=[
     "*.html",
     "*.css",
     "*.js"
+]
+
+[dependency-groups]
+dev = [
+    "ipython>=9.6.0",
 ]
