--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.2",
     "flask-socketio>=5.5.1",
+    "gitpython>=3.1.45",
     "nidaqmx>=1.3.0",
     "numpy>=2.3.4",
     "opencv-python>=4.11.0.86",
