--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "opencv-python>=4.11.0.86",
     "pillow>=12.0.0",
     "pygame>=2.6.1",
+    "pyserial>=3.5",
     "pyyaml>=6.0.3",
     "tqdm>=4.67.1",
 ]
